# eduscheduler-backend

./: .flake8  .pre-commit-config.yaml  pyproject.toml
scripts/: service_creator.py
