[tool.poetry]
name = "eduscheduler-backend"
version = "0.1.0"
description = ""
authors = ["Dmitri <Dmitri.Danshin2017@gmail.com>"]
readme = "README.md"
packages = [{include = "eduscheduler_backend"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
